--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <title>Svelte app</title>
+		<title>Svelte app</title>
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+		<link rel="icon" href="favicon.ico" type="image/x-icon" />
+		<script defer src="/main.ts"></script>
+    <meta name="google-signin-scope" content="profile email">
+    <meta name="google-signin-client_id" content="839221911799-1m1pka5nmsmjl2vf8sj3n8losdcidst9.apps.googleusercontent.com">
+ 
+    <script src="https://apis.google.com/js/api.js"></script>
+    <script>
+      function start() {
+        return gapi.auth2.init({
+          client_id: '839221911799-1m1pka5nmsmjl2vf8sj3n8losdcidst9.apps.googleusercontent.com'
+         });
+      };
+      gapi.load('client', start);
+    </script>
+	</head>
 
-    <script defer src="/main.ts"></script>
-  </head>
-
-  <body></body>
+	<body></body>
 </html>
